Fix overflow on x axis in body

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 body {
     font-family: sans-serif;
+    -webkit-font-smoothing: antialiased;
+    overflow-x:hidden;
 }
 
 /* Navigation Bar Section */
